# toolz

./: .gitmodules  CMakeLists.txt
data/: bitdiff.txt  pal_cp.txt
source/: CMakeLists.txt  bitdiff.cpp  pencel.cpp  thext.cpp
